# Checkers

./: readme.md
GuiNN-Checkers/: CMakeLists.txt
GuiNN-Checkers/src/: main.c
NeuroMino-Checkers/: CMakeLists.txt
NeuroMino-Checkers/src/: main.c
